# nonebot_plugin_PCtrl

./: .coverage  .gitignore  LICENSE  README.md  __init__.py  config.py  coverage.xml  hook.py  method.py  pyproject.toml  run.sh  secure.yaml  securet.json.example  test.sqlite
controller/: __init__.py  config.py  secure.yaml
controller/core/: __init__.py  cfg.py  config.py  permission.py  utils.py
controller/methods/: __init__.py  ban.py  cfg.py  config.py  cool.py  utils.py
controller/models/: __init__.py  plugin_models.py  user_models.py
controller/plugin/: __init__.py  ban.py  cool.py  init_db.py  sender.py
controller/plugin/core/: __init__.py  permission.py
controller/plugin/methods/: ban.py  cfg.py  utils.py
global_controller/: __init__.py  config.py  plugins_ban.py  plugins_coolen.py  plugins_switch.py
global_controller/core/: __init__.py  ban.py  cfg.py  cool.py
models/: __init__.py  config.py  global_models.py  plugin_models.py  user_models.py
new/: .coverage  coverage.xml  pyproject.toml  run.sh
new/controller/: core.py  methods.py  models.py  state.py
new/test/: conftest.py  test_core.py  utils.py
nonebot_plugin_PCtrl/: __init__.py  hook.py
nonebot_plugin_PCtrl/global_controller/: plugins_ban.py
nonebot_plugin_PCtrl/models/: config.py
plugin/: __init__.py  _plugins_ban.py  ban.py  cool.py  init_db.py  plugins_coolen.py  plugins_switch.py  sender.py
plugin/core/: __init__.py  ban.py  cfg.py  cool.py  permission.py
plugin/methods/: __init__.py  ban.py  cfg.py  config.py  cool.py  exception.py  utils.py
test/: conftest.py
test/test_core/: test_cfg.py  test_permission.py
test/test_method/: test_ban.py
