[tool.poetry]
name = "nonebot_plugin_PCtrl"
version = "0.1.4"
description = ""
authors = ["CherryGS <uplliode@gmail.com>"]
license = "MIT"
homepage = "https://github.com/CherryGS/nonebot_plugin_PCtrl"
repository = "https://github.com/CherryGS/nonebot_plugin_PCtrl"
readme = "README.md"
documentation = "https://github.com/CherryGS/nonebot_plugin_PCtrl#readme"
packages = [
    { include = "nonebot_plugin_PCtrl", from = ".." }
]

[tool.poetry.dependencies]
python = "^3.7.3"
SQLAlchemy = "^1.4.29"
aiosqlite = "^0.17.0"
nonebot2 = "^2.0.0-alpha.16"
nonebot-adapter-cqhttp = "^2.0.0-alpha.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
